[package]
name = "loginw"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Desktop" ]
description = "setuid wrapper for Wayland compositors"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/loginw"
repository = "https://github.com/myfreeweb/loginw"

[dependencies]
libc = "0.2"
nix = "0.11"
tiny-nix-ipc = "0"
pdfork = "0"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.2"

[build-dependencies]
pkg-config = "0.3"
